--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="./css/style.css">
         <!-- Site_logo -->
         <link rel="icon" href="./images/PngItem_169716.png">
+        <!-- end of styles -->
     </head>
 
     <body>
@@ -74,10 +75,10 @@
 
             <!-- home_content -->
             <section id="home">
-                <div class="container">
+                <div class="container py-5">
                     <div class="row justify-content-center align-items-center">
 
-                        <div class="col-md-6">
+                        <div class="col-md-6 nav-title">
                             <h1 class="text-dark fw-bold display-2 text_shadow "> Super Delicious
                                 <span class="site_primary_color ">Burger</span>
                             </h1>
@@ -90,7 +91,7 @@
                             </a>
                         </div>
                         <div class="col-md-6" id="home_image">
-                            <img src="./images/PngItem_169716.png" alt="" class="img-fluid">
+                            <img src="./images/burger_png.png" alt="" class="img-fluid">
                         </div>
                     </div>
                 </div>
@@ -141,7 +142,7 @@
             <div class="container">
                 <div class="row">
                     <!-- left_image -->
-                    <div class="col-md-6">
+                    <div class="col-md-6 py-2">
                         <div class="image_container shadow">
                             <img src="./images/img-3.jpg" alt="" class="rounded">
                             <div class="image_container_details">
@@ -156,7 +157,7 @@
                         </div>
                     </div>
                     <!-- right_image -->
-                    <div class="col-md-6">
+                    <div class="col-md-6 py-2">
                         <div class="image_container shadow">
                             <img src="./images/img-4.jpg" alt="" class="rounded">
                             <div class="image_container_details">
@@ -179,7 +180,7 @@
             <div class="container">
                 <div class="row">
                     <!-- Fried Chicken -->
-                    <div class="col-md-4">
+                    <div class="col-md-4 pb-4">
                         <div class="image_container shadow">
                             <img src="./images/chicken.png" alt="" class="rounded">
                             <div class="image_container_details">
@@ -195,7 +196,7 @@
                     </div>
 
                     <!-- deta -->
-                    <div class="col-md-4">
+                    <div class="col-md-4 pb-4">
                         <div class="image_container shadow">
                             <img src="./images/img-1.png" alt="" class="rounded">
                             <div class="image_container_details">
@@ -210,7 +211,7 @@
                         </div>
                     </div>
                     <!-- Cheese Burger  -->
-                    <div class="col-md-4">
+                    <div class="col-md-4 pb-4">
                         <div class="image_container shadow">
                             <img src="./images/img-5.jpg" alt="" class="rounded">
                             <div class="image_container_details">
@@ -520,7 +521,7 @@
 
            
 <!-- Footer -->
-<footer class=" text-center " style="background-color:#f58607;">
+<footer class=" text-center text-light " style="background-color:#f58607;">
     <!-- Grid container -->
     <div class="container p-4">
   
@@ -554,21 +555,21 @@
         <div class="row">
           <!--Grid column-->
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase">Links</h5>
+            <h5 class="text-uppercase">Useful links</h5>
   
-            <ul class="list-unstyled mb-0">
-              <li>
-                <a href="#!" class="text-dark">Link 1</a>
-              </li>
-              <li>
-                <a href="#!" class="text-dark">Link 2</a>
-              </li>
-              <li>
-                <a href="#!" class="text-dark">Link 3</a>
-              </li>
-              <li>
-                <a href="#!" class="text-dark">Link 4</a>
-              </li>
+            <ul class="list-unstyled text-left mb-0">
+                <li>
+                    <a href="#!" class="text-dark">Home</a>
+                  </li>
+                  <li>
+                    <a href="#!" class="text-dark">About</a>
+                  </li>
+                  <li>
+                    <a href="#!" class="text-dark">Services</a>
+                  </li>
+                  <li>
+                    <a href="#!" class="text-dark">Contact</a>
+                  </li>
             </ul>
           </div>
           <!--Grid column-->
@@ -617,20 +618,20 @@
   
           <!--Grid column-->
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase">Links</h5>
+            <h5 class="text-uppercase">Useful links</h5>
   
             <ul class="list-unstyled mb-0">
               <li>
-                <a href="#!" class="text-dark">Link 1</a>
+                <a href="#!" class="text-dark">Home</a>
               </li>
               <li>
-                <a href="#!" class="text-dark">Link 2</a>
+                <a href="#!" class="text-dark">About</a>
               </li>
               <li>
-                <a href="#!" class="text-dark">Link 3</a>
+                <a href="#!" class="text-dark">Services</a>
               </li>
               <li>
-                <a href="#!" class="text-dark">Link 4</a>
+                <a href="#!" class="text-dark">Contact</a>
               </li>
             </ul>
           </div>
